--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
         <div class="container">
             <div class="header-logo">Pragyesh</div>
+            <div class="menu">
             <span class="fa fa-bars menu-icon"></span>
+            </div>
             <div class="header-list">
                 <ul class="list-style">
                     <a href="#"><li>Home</li></a>
@@ -35,20 +37,22 @@
     </div>
     <div class="message-wrapper">
        <div class="container">
-        <div class="mypic">
-            <img src="pragyeshimg.jpeg" alt="my picture">
-        </div>
-        <div class="contact-btn">
-            <a href="#" class="btn facebook"><span class="fa fa-facebook"></span></a>
-            <a href="#" class="btn twitter"><span class="fa fa-twitter"></span></a>
-        </div>
+           <div class="message-item">
+            <div class="mypic">
+                <img src="pragyeshimg.jpeg" alt="my picture">
+            </div>
+            <div class="contact-btn">
+                <a href="facebook.com" target="_blank" class="btn facebook"><span class="fa fa-facebook"></span></a>
+                <a href="twitter.com" target="_blank" class="btn twitter"><span class="fa fa-twitter"></span></a>
+            </div>
+           </div>
        </div>
     </div>
     <footer>
         <div class="container">
             <div class="footer-content">
                 <h2 class="footer-logo">Pragyesh</h2>
-                <ul>
+                <ul class="footer-item">
                     <a href="#"><li>About</li></a>
                     <a href="#"><li>Work</li></a>
                     <a href="#"><li>Contact</li></a>
